more project summaries + work experiences

--- a/index.html
+++ b/index.html
@@ -41,20 +41,23 @@
       <div>
         <h2>Professional Experience</h2>
         <div>
+
             <div class="app-work-experience-summary">
-              <h3>{{jobTitle}}</h3>
-              <h3>{{company}}</h3>
-              <h3>{{location}}</h3>
-              <h3>{{when}}</h3>
-              <p>{{description}}</p>
+              <h3>Back End Developer / Intern</h3>
+              <h3>Little Caesars</h3>
+              <h3>Detroit, MI</h3>
+              <h3>May 2023 - Present</h3>
+              <p>As an intern on the Web Services team, I contributed to the development of Little Caesars global online ordering back end which is built within the C#/.NET environment. I was originally assigned to the \"Favorite Order\" project along with other interns where I completed the back end's RESTful API ahead of schedule. Now a part-time developer, I have contributed to the maintenance and implementation of new features, migrated legacy code, unraveled annoying bugs, and written unit tests.</p>
             </div>
+
             <div class="app-work-experience-summary">
-              <h3>{{jobTitle}}</h3>
-              <h3>{{company}}</h3>
-              <h3>{{location}}</h3>
-              <h3>{{when}}</h3>
-              <p>{{description}}</p>
+              <h3>Teacher's Assistant</h3>
+              <h3>Eastern Michigan University</h3>
+              <h3>Ypsilanti, MI</h3>
+              <h3>September 2021 - April 2023</h3>
+              <p>Asked by a professor after performing well in multiple classes, I assisted in teaching students and grading coursework for the beginner and intermediate classes Intro to Programming, Programming Data Structures, Computer Organization, and Programming Languages while maintaining my grades as a full time student. I explained technical concepts such as data structures in Java and assembly language to students and assisted them complete lab assignments.</p>
             </div>
+            
         </div>
       </div>
     </div>
@@ -132,6 +135,59 @@
             <p class="app-project-summary--description">An all-in-one web application designed to allow students to succeed in school by providing everything in one place. Contains calendar, to-do, flashcard, and notebook 'applets' and boasts an interactive and customizable user interface. As team leader, directed the  of the project's goals and architecture, coordinated meetings, and organized the project backlog. In addition to leadership responsibilities, I developed full stack features like the Notebook applet and the dynamic web interface.</p>
             <div class="app-project-summary--link" >
                 <a href="https://github.com/COSC481W-2023Fall/SAIO" target="_blank">https://github.com/COSC481W-2023Fall/SAIO</a>
+            </div>    
+          </div>
+        </div>
+
+        <div class="app-project-summary">
+          <div class="app-project-summary--background">
+            <div class="app-project-summary--header">
+                <div class="app-project-summary--header--top">
+                    <div class="app-project-summary--header--title-and-company">
+                        <h3>SamS's Musket Mod</h3>
+                        <h4 class="app-project-summary--header--title-and-company--company">
+                            <span class="app-project-summary--header--title-and-company--company--commat">&commat;</span>
+                            &nbsp;Self-Driven
+                        </h4>
+                    </div>
+                    <p class="app-project-summary--header--when">January 2024 - March 2024"</p>
+                </div>
+                <h4 class="app-project-summary--header--skills">
+                    <span>
+                        Java
+                    </span>
+                </h4>
+            </div>
+            <p class="app-project-summary--description">A personal project made for a favorite pastime. Interacted with the Gradle build system and reverse-engineered a large code base with little available documentation. Used advanced techniques like reflection and multithreading and interacted with complex inheritance hierarchies to complete the project in a reasonable time frame.</p>
+            <div class="app-project-summary--link" >
+                <a href="https://www.curseforge.com/members/sams/projects" target="_blank">https://www.curseforge.com/members/sams/projectsSAIO</a>
+            </div>    
+          </div>
+        </div>
+
+        <div class="app-project-summary">
+          <div class="app-project-summary--background">
+            <div class="app-project-summary--header">
+                <div class="app-project-summary--header--top">
+                    <div class="app-project-summary--header--title-and-company">
+                        <h3>Stock Breaker</h3>
+                        <h4 class="app-project-summary--header--title-and-company--company">
+                            <span class="app-project-summary--header--title-and-company--company--commat">&commat;</span>
+                            &nbsp;EMU Game Developer Guild
+                        </h4>
+                    </div>
+                    <p class="app-project-summary--header--when">September 2023- December 2023"</p>
+                </div>
+                <h4 class="app-project-summary--header--skills">
+                    <span>
+                      C#
+                      <span>|</span> Unity
+                    </span>
+                </h4>
+            </div>
+            <p class="app-project-summary--description">Top-down brawler video game with a kid's drawing art style created as part of the EMU Game Developer Guild. Coded scripts for character control, enemy AI, and boss AI, collaborated with team members across teams and of varying experience to commit new features, and contributed to the game's design and direction.</p>
+            <div class="app-project-summary--link" >
+                <a href="" target="_blank"></a>
             </div>    
           </div>
         </div>
