basic content in the call-to-action
the thing that's holding me back is vision: I don't know what I'm trying to go for, so it's hard to build towards it. This'll do for now.

--- a/index.html
+++ b/index.html
@@ -238,9 +238,28 @@
 
     <div class="app-call-to-action content-section">
       <div>
-        <a href="mailto: mailto:samuelrystone@gmail.com?subject=Get In Touch&body=Hello Sam! I was SOOO impressed with your portfolio website... ">
-          <h2 class="app-call-to-action--contact">Contact</h2>
-        </a>
+        <div class="app-call-to-action--left">
+          <h2 class="app-call-to-action--phrase">Don't be a stranger!</h2>
+          <p class="app-call-to-action--p">If you want to get in touch, please send an email. You can find me around on:</p>
+          <ul>
+            <li><a href="https://linkedin.com/in/samuelryanstone" target="_blank">LinkedIn</a></li>
+            <li><a href="https://github.com/samstone02" target="_blank">GitHub (Personal)</a></li>
+            <li><a href="https://github.com/srstone20" target="_blank">GitHub (School, Old)</a></li>
+            <li><a href="https://legacy.curseforge.com/members/sams/projects" target="_blank">CurseForge</a></li>
+          </ul>
+        </div>
+        <div class="app-call-to-action--right">
+          <div class="app-call-to-action--headshot-wrapper">
+            <img class="app-call-to-action--headshot" src="/assets/headshot.jpg" alt="My Face">
+          </div>
+          <div class="app-call-to-action--contact-button">
+            <h2>
+              <a href="mailto: mailto:samuelrystone@gmail.com?subject=Get In Touch&body=Hello Sam! I was SOOO impressed with your portfolio website... ">
+                Contact Now
+              </a>
+            </h2>
+          </div>
+        </div>
       </div>
     </div>
 
