some hero adjustments

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <h1 class="app-hero--title"><span class="app-hero--title--emphasis">Sam</span> Stone.</h1>
 
             <!-- Remove when complete! -->
-            <p style="color:var(--secondary-color)"> Pardon the dust! This site is under construction. </p>
+            <!-- <p style="color:var(--secondary-color)"> Pardon the dust! This site is under construction. </p> -->
 
-            <p class="app-hero--about">Welcome! I'm Sam, a fullstack software developer with a passion for web and game development. Please take a look around!</p>
+            <p class="app-hero--about">Hello, I'm Sam. I'm a backend software developer with some (passable) front end experience. I also dabble in game dev. Outside of technology, I enjoy rock climbing and longboarding. Please take a look around!</p>
         </div>
         <div class="app-hero--right">
             <div class="app-hero--decorative-block app-hero--decorative-block-1"></div>
